style: Remove 'Combat Time:' prefix and increase font size
- Remove 'Combat Time:' text from time display, show only HH:MM:SS:mmm
- Increase combat time font size from 10pt to 12pt for better readability
- Clean up time display format for both Last Combat and Overall Damage views

--- a/TNL_DPS_Meter/MainWindow.xaml
+++ b/TNL_DPS_Meter/MainWindow.xaml
@@ -180,8 +180,8 @@
                              Foreground="{StaticResource TextBrush}"
                              HorizontalAlignment="Center"/>
                     <TextBlock x:Name="LastCombatTimeText"
-                             Text="Combat Time: 00:00:00:000"
-                             FontSize="10"
+                             Text="00:00:00:000"
+                             FontSize="12"
                              Foreground="#FFAAAAAA"
                              HorizontalAlignment="Center"
                              Margin="0,5,0,0"/>
@@ -199,8 +199,8 @@
                              Foreground="{StaticResource TextBrush}"
                              HorizontalAlignment="Center"/>
                     <TextBlock x:Name="OverallTimeText"
-                             Text="Combat Time: 00:00:00:000"
-                             FontSize="10"
+                             Text="00:00:00:000"
+                             FontSize="12"
                              Foreground="#FFAAAAAA"
                              HorizontalAlignment="Center"
                              Margin="0,5,0,0"/>
