--- a/TNL_DPS_Meter/MainWindow.xaml
+++ b/TNL_DPS_Meter/MainWindow.xaml
@@ -146,6 +146,8 @@
                              Width="140"
                              Height="20"
                              FontSize="9"
+                             MaxDropDownHeight="120"
+                             ScrollViewer.VerticalScrollBarVisibility="Auto"
                              Style="{StaticResource CustomComboBoxStyle}"
                              ItemContainerStyle="{StaticResource CustomComboBoxItemStyle}"
                              SelectionChanged="ViewSelector_SelectionChanged">
