--- a/TNL_DPS_Meter/MainWindow.xaml
+++ b/TNL_DPS_Meter/MainWindow.xaml
@@ -73,6 +73,18 @@
                                         CornerRadius="3">
                                     <ScrollViewer MaxHeight="120"
                                                   VerticalScrollBarVisibility="Auto">
+                                        <ScrollViewer.Resources>
+                                            <Style TargetType="ScrollBar">
+                                                <Setter Property="Background" Value="Transparent"/>
+                                                <Setter Property="BorderBrush" Value="Transparent"/>
+                                                <Setter Property="Width" Value="12"/>
+                                                <Style.Resources>
+                                                    <SolidColorBrush x:Key="{x:Static SystemColors.ControlBrushKey}" Color="Transparent"/>
+                                                    <SolidColorBrush x:Key="{x:Static SystemColors.ControlLightBrushKey}" Color="{StaticResource TabBackgroundBrush}"/>
+                                                    <SolidColorBrush x:Key="{x:Static SystemColors.ControlDarkBrushKey}" Color="{StaticResource TabBackgroundBrush}"/>
+                                                </Style.Resources>
+                                            </Style>
+                                        </ScrollViewer.Resources>
                                         <ItemsPresenter/>
                                     </ScrollViewer>
                                 </Border>
